--- a/applicant-server/public/signup.html
+++ b/applicant-server/public/signup.html
@@ -5,16 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GoHire - Sign Up</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/signup.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body class="bodywala">
+  <!-- Toast Notification Container -->
+  <div id="toast-container" class="fixed top-5 right-5 z-50"></div>
+
   <div class="login-container">
     <div class="login-left">
       <div class="login-heading">
-        <h1 class="main-heading">GoHire</h1>
-        <p class="sub-heading">Get Yourself Hired</p>
+        <h1 class="main-heading">Go<span style="color:#FFD700">Hire</span></h1>
+          <p class="sub-heading" style="color:black;">Get Yourself Hired</p>
       </div>
     </div>
     <div class="login-right">
@@ -22,7 +26,7 @@
       <hr>
       <br>
 
-      <form action="/auth/signup" method="POST" class="signup-form">
+      <form id="signupForm" class="signup-form">
         <div class="form-row">
           <div class="form-group">
             <label for="firstName">First Name <span class="required">*</span></label>
@@ -109,7 +113,7 @@
 
         <div class="form-actions">
           <div class="login-link">
-            Already have an account? <a href="/login">Login</a>
+            Already have an account? <a href="/login.html">Login</a>
           </div>
           <button type="submit" class="next-button">Next</button>
         </div>
@@ -118,6 +122,22 @@
   </div>
 
   <script>
+    // Toast notification function
+    function showToast(message, type = 'success') {
+      const toastContainer = document.getElementById('toast-container');
+      const toast = document.createElement('div');
+      toast.className = `toast p-4 mb-3 rounded-lg shadow-lg text-white transition-opacity duration-300 ${
+        type === 'success' ? 'bg-green-500' : 'bg-red-500'
+      }`;
+      toast.textContent = message;
+      toastContainer.appendChild(toast);
+
+      setTimeout(() => {
+        toast.style.opacity = '0';
+        setTimeout(() => toast.remove(), 300);
+      }, 3000);
+    }
+
     // Toggle password visibility
     document.getElementById('togglePassword').addEventListener('click', function () {
       const passwordInput = document.getElementById('password');
@@ -145,7 +165,7 @@
       }
     });
 
-    // Validate first name and last name on input
+    // Real-time validation for first name
     document.getElementById('firstName').addEventListener('input', function () {
       const namePattern = /^[A-Za-z]+$/;
       const errorElement = document.getElementById('firstNameError');
@@ -157,6 +177,7 @@
       }
     });
 
+    // Real-time validation for last name
     document.getElementById('lastName').addEventListener('input', function () {
       const namePattern = /^[A-Za-z]*$/; // * instead of + to allow empty
       const errorElement = document.getElementById('lastNameError');
@@ -168,17 +189,19 @@
       }
     });
 
-    // Form validation
-    document.querySelector('.signup-form').addEventListener('submit', function (event) {
+    // Form validation and submission
+    document.getElementById('signupForm').addEventListener('submit', async function (event) {
+      event.preventDefault();
+
       let isValid = true;
-      let firstName = document.getElementById('firstName').value.trim();
-      let lastName = document.getElementById('lastName').value.trim();
-      let email = document.getElementById('email').value.trim();
-      let phone = document.getElementById('phone').value.trim();
-      let password = document.getElementById('password').value.trim();
-      let confirmPassword = document.getElementById('confirmPassword').value.trim();
-      let genderSelected = document.querySelector('input[name="gender"]:checked');
-      let termsChecked = document.getElementById('termsAgree').checked;
+      const firstName = document.getElementById('firstName').value.trim();
+      const lastName = document.getElementById('lastName').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const confirmPassword = document.getElementById('confirmPassword').value.trim();
+      const genderSelected = document.querySelector('input[name="gender"]:checked');
+      const termsChecked = document.getElementById('termsAgree').checked;
 
       // Validate first name (letters only)
       const namePattern = /^[A-Za-z]+$/;
@@ -198,10 +221,11 @@
       }
 
       if (firstName.length === 0) {
-        alert("First Name is required.");
-        isValid = false;
+        showToast('First Name is required.', 'error');
+        return;
       }
 
+      // Email validation
       const validDomains = ['gmail', 'yahoo', 'outlook', 'hotmail', 'icloud',
         'aol', 'protonmail', 'zoho', 'example', 'company', 'iiits', 'google', 'apple', 'sbi', 'flipkart', 'amazon', 'hdfc'];
 
@@ -218,8 +242,7 @@
       const emailPattern = /^[a-zA-Z0-9._%+-]+@([a-zA-Z0-9-]+)\.([a-zA-Z]{2,})$/;
 
       if (!emailPattern.test(email)) {
-        alert('Please Enter a valid email address.');
-        event.preventDefault();
+        showToast('Please enter a valid email address.', 'error');
         return;
       }
 
@@ -230,50 +253,85 @@
 
       // Validate against allowed lists
       if (!validDomains.includes(domainName)) {
-        alert('Please Enter a valid email address.');
-        event.preventDefault();
+        showToast('Please enter a valid email address.', 'error');
         return;
       }
 
       if (!validTLDs.includes(tld)) {
-        alert('Please Enter a valid email address.');
-        event.preventDefault();
+        showToast('Please enter a valid email address.', 'error');
         return;
       }
 
-      let phonePattern = /^[0-9]{10}$/;
+      // Phone validation
+      const phonePattern = /^[0-9]{10}$/;
       if (!phonePattern.test(phone)) {
-        alert('Phone number must be exactly 10 digits.');
-        event.preventDefault();
+        showToast('Phone number must be exactly 10 digits.', 'error');
         return;
       }
 
+      // Gender validation
       if (!genderSelected) {
-        alert('Please select a gender.');
-        event.preventDefault();
+        showToast('Please select a gender.', 'error');
         return;
       }
 
+      // Password validation
       if (password.length < 4) {
-        alert('Password must be at least 4 characters long.');
-        event.preventDefault();
+        showToast('Password must be at least 4 characters long.', 'error');
         return;
       }
 
       if (password !== confirmPassword) {
-        alert('Passwords do not match.');
-        event.preventDefault();
+        showToast('Passwords do not match.', 'error');
         return;
       }
 
+      // Terms validation
       if (!termsChecked) {
-        alert('You must agree to the terms and conditions.');
-        event.preventDefault();
+        showToast('You must agree to the terms and conditions.', 'error');
         return;
       }
 
       if (!isValid) {
-        event.preventDefault();
+        return;
+      }
+
+      // Prepare form data
+      const formData = {
+        firstName: firstName,
+        lastName: lastName,
+        email: email,
+        phone: phone,
+        gender: genderSelected.value,
+        password: password,
+        confirmPassword: confirmPassword,
+        termsAgree: termsChecked
+      };
+
+      try {
+        // Send POST request to signup endpoint
+        const response = await fetch('/auth/signup', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(formData)
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          showToast('Signup successful! Redirecting...', 'success');
+          // Redirect after successful signup
+          setTimeout(() => {
+            window.location.href = data.redirectUrl || '/login.html';
+          }, 1500);
+        } else {
+          showToast(data.message || 'Signup failed. Please try again.', 'error');
+        }
+      } catch (error) {
+        console.error('Error:', error);
+        showToast('An error occurred. Please try again.', 'error');
       }
     });
   </script>
